# Report-Generator

./: .gitignore  Dockerfile  README.md  deploy.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: config.py  errors.py  exceptions.py  logger.py
app/middleware/: api_key_auth.py  logging.py  rate_limit.py
app/routes/: health.py  report.py
app/services/: ai_service.py  report_service.py  zip_service.py
